where to search information
hints for tourism, OJA, steps of creating a project i VS Code

--- a/steps.ipynb
+++ b/steps.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "* in terminal use command: python<python_version> -m venv <venv_name> (e.g. python3.10 -m venv scraping)\n",
-    "* e.g. python3.10 -m venv scraping"
+    "> python3.10 -m venv scraping"
    ]
   },
   {
@@ -183,20 +183,14 @@
     "<br> to do it from the Terminal, go to the path where your project is (it should already be visible) </br>\n",
     "* e.g. C:\\Users\\domin\\PythonProjects\\UNECE_training>\n",
     "* now go to Scripts folder inside the venv folder\n",
-    "* cd scraping\\Scripts    <scraping is the name of the virtual environment>\n",
+    "> cd scraping\\Scripts    <scraping is the name of the virtual environment>\n",
     "* finally to activate the venv:\n",
-    "* .\\activate\n",
+    "> .\\activate\n",
     "\n",
     "<br>if it doesn't work you may need to change the settings of execution policy, type: </br>\n",
     "<br>Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope Process </br>\n",
     "<br>and the repeat the from above to activate the venv </br>\n"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
